plugins {
	id 'org.springframework.boot' version '2.5.5'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

//mainClassName: 'com.desafios.soccer'

dependencies {
	implementation project(":controller")
}

allprojects {
	apply plugin: 'java'
	apply plugin: 'io.spring.dependency-management'

	group = 'com.desafios'
	version = '0.0.1-SNAPSHOT'
	sourceCompatibility = JavaVersion.VERSION_11

	repositories {
		mavenCentral()
	}

	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.6'
		implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
		implementation 'javax.validation:validation-api:2.0.1.Final'
		implementation 'org.mapstruct:mapstruct:1.4.2.Final'
		compileOnly 'org.projectlombok:lombok:1.18.22'
		runtimeOnly 'com.h2database:h2:1.4.200'
		runtimeOnly 'org.postgresql:postgresql:42.3.1'
		annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
		annotationProcessor 'org.projectlombok:lombok:1.18.22'
		testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.6'
	}

	test {
		useJUnitPlatform()
	}

}
